modules/gdscript/tests/scripts/analyzer/errors/property_used_as_function.gd
var property = 25

func test():
	property()
